Thu Sep 23 07:28:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/orbsvcs/sfp.idl:
          Removed anonymous types.

Thu Sep 23 06:07:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Updated generated includes, forgot to commit yesterday

Wed Sep 22 12:56:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Updated servant base class name

Wed Sep 22 12:05:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/orbsvcs.html:
          Fine tuning documentation.

Wed Sep 22 11:58:47 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/orbsvcs.html:
        * orbsvcs/Concurrency_Service/Concurrency_Service.mpc:
          Renamed 'Concurrency_Service' to 'tao_cosconcurrency'

Wed Sep 22 11:56:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/orbsvcs.html:
        * orbsvcs/Fault_Notifier/Fault_Notifier.mpc:
        * orbsvcs/tests/FT_App/run_test_demo.pl:
        * orbsvcs/tests/FT_App/run_test_detector.pl:
        * orbsvcs/tests/FT_App/run_test_notifier.pl:
        * orbsvcs/tests/FT_App/run_test_rmnotifier.pl:
          Renamed 'Fault_Notifier' to 'tao_fault_notifier'

Wed Sep 22 11:49:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * docs/tutorials/Quoter/Simple/Impl-Repo/index.html:
        * orbsvcs/DevGuideExamples/ImplRepo/Activator/run_test.pl:
        * orbsvcs/DevGuideExamples/ImplRepo/run_test.pl:
        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
        * orbsvcs/examples/ImR/Advanced/run_test.pl:
        * orbsvcs/tests/Bug_1395_Regression/run_test.pl:
        * orbsvcs/tests/Bug_1437_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/Bug_2604_Regression/run_test.pl:
        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl: