@@ -1,3 +1,11 @@
+Thu Sep 23 08:57:10 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * orbsvcs/DevGuideExamples/EventServices/OMG_Basic/run_test.pl:
+        * orbsvcs/DevGuideExamples/EventServices/OMG_TypedEC/run_test.pl:
+        * orbsvcs/examples/CosEC/TypedSimple/run_test.pl:
+        * orbsvcs/tests/CosEvent/Timeout/run_test.pl:
+          Resolved some test errors due to the renaming action.
+
 Thu Sep 23 07:28:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * orbsvcs/orbsvcs/sfp.idl:
